--- a/DeviceHandler/Faults/FaultsMCUView.xaml
+++ b/DeviceHandler/Faults/FaultsMCUView.xaml
@@ -7,9 +7,7 @@
                      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                      xmlns:local="clr-namespace:DeviceHandler.Faults"
                      mc:Ignorable="d"
-                     Title="MCU Faults" Height="850" Width="800"
-                     Closing="MetroWindow_Closing"
-                     Loaded="MetroWindow_Loaded">
+                     Title="MCU Faults" Height="850" Width="800">
     
 
     <local:FaultsMCUDataView DataContext="{Binding}" />
