--- a/DeviceSimulators/Views/SimulatorsMainView.xaml
+++ b/DeviceSimulators/Views/SimulatorsMainView.xaml
@@ -4,10 +4,23 @@
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
+                 xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                  xmlns:local="clr-namespace:DeviceSimulators.Views"
                  mc:Ignorable="d"
                  Title="Simulators" Height="450" Width="1100">
-    
+
+    <i:Interaction.Triggers>
+
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction Command="{Binding Path=DataContext.ClosingCommand, 
+                                                         Mode=OneWay, 
+                                                         RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" 
+                               PassEventArgsToCommand="True"/>
+        </i:EventTrigger>
+
+    </i:Interaction.Triggers>
+
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
