--- a/DeviceHandler/Views/ParametersView.xaml
+++ b/DeviceHandler/Views/ParametersView.xaml
@@ -27,7 +27,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Name="grdMain">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
