--- a/DeviceHandler/Views/SelectedParametersListView.xaml
+++ b/DeviceHandler/Views/SelectedParametersListView.xaml
@@ -112,17 +112,21 @@
 
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Background="{Binding Data.Background}" ToolTip="{Binding Data.ToolTip}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="20"/>
                             <ColumnDefinition Width="10"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Column="0" Name="tb" Text="{Binding Index}"/>
+                        <TextBlock Grid.Column="0" Name="tb" 
+                                   Text="{Binding Index}"
+                                   Foreground="{Binding Data.Foreground}"/>
 
 
-                        <TextBlock Grid.Column="2" Text="{Binding Data}" />
+                        <TextBlock Grid.Column="2" 
+                                   Text="{Binding Data}"
+                                   Foreground="{Binding Data.Foreground}" />
 
                     </Grid>
                 </DataTemplate>
