Allow deleting multiple devices from the selected list of setup window

--- a/DeviceHandler/Views/SetupSelectionView.xaml
+++ b/DeviceHandler/Views/SetupSelectionView.xaml
@@ -148,7 +148,8 @@
 
             <DataGrid.InputBindings>
                 <KeyBinding Key="Delete" 
-                            Command="{Binding DeleteDeviceCommand}" />
+                            Command="{Binding DeleteDeviceCommand}" 
+                            CommandParameter="{Binding SelectedItems, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}}"/>
             </DataGrid.InputBindings>
 
             <i:Interaction.Triggers>
