--- a/DeviceHandler/Views/CanConnectView.xaml
+++ b/DeviceHandler/Views/CanConnectView.xaml
@@ -76,10 +76,9 @@
             </ComboBox>
 
             <TextBlock Text="Node ID" VerticalAlignment="Center" Margin="0,0,5,0"/>
-            <TextBox Text="{Binding SyncNodeID}" Margin="0,0,50,0" Width="100" />
-            <!--<controls_view:HexTextBoxView Text="{Binding SyncNodeID}" Width="100">
+            <controls_view:HexTextBoxView Text="{Binding SyncNodeIDText, Mode=TwoWay}" Width="100">
 
-                <i:Interaction.Triggers>
+                <!--<i:Interaction.Triggers>
 
                     <i:EventTrigger EventName="HexKeyDownEvent">
                         <i:InvokeCommandAction Command="{Binding Path=DataContext.HexKeyDownEventCommand, 
@@ -95,9 +94,9 @@
                                                    PassEventArgsToCommand="True"/>
                     </i:EventTrigger>
 
-                </i:Interaction.Triggers>
+                </i:Interaction.Triggers>-->
 
-            </controls_view:HexTextBoxView>-->
+            </controls_view:HexTextBoxView>
 
 
            
