--- a/DeviceHandler/plots/Speedometer.xaml
+++ b/DeviceHandler/plots/Speedometer.xaml
@@ -11,23 +11,29 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
+       
+
+        <Grid Grid.Row="0" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width ="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="5" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-
-            <StackPanel Orientation="Horizontal" Grid.Column ="0" HorizontalAlignment="Center">
-                <TextBlock Text="Title" FontWeight="DemiBold" HorizontalAlignment="Center" FontSize="14" Height="20" VerticalAlignment="Center"></TextBlock>
-                <TextBlock Name="GuageTitle" Text="{Binding Title}" HorizontalAlignment="Center" FontSize="14" Height="20" VerticalAlignment="Center" Margin="10,0,0,0"></TextBlock>
-            </StackPanel>
-
-            
+            <TextBlock Grid.Column="0" 
+                       Text="Title" 
+                       FontWeight="DemiBold" 
+                       FontSize="14" />
+            <TextBlock Grid.Column="2" 
+                       Name="GuageTitle" 
+                       Text="{Binding Title}" 
+                       FontSize="14" 
+                       Margin="10,0,0,0"/>
         </Grid>
+
 
 
 
